<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gm.gmannotation.fragments.FirstFragment">

    <com.gm.gmannotation.customview.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/hello_blank_fragment"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:fontName="@string/roboto_condensed_regular" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <com.gm.gmannotation.customview.CustomEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Custom.EditText"
            android:id="@+id/edtSetBundle"
            android:layout_marginBottom="20dp"
            app:fontNames="@string/roboto_bold"/>
        <Button
            android:id="@+id/btnGotoSecondFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_secont_fragment_with_value" />
    </LinearLayout>
</LinearLayout>
