<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.gm.gmannotation.activities.SecondActivity">

    <com.gm.gmannotation.customview.TransparentTextTextView
        android:id="@+id/textView2"
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/second_activity"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="@color/colorAccent" />


    <com.gm.gmannotation.customview.CustomTextView
        android:id="@+id/txtValues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnGetValue"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:fontName="@string/roboto_bold" />

    <Button
        android:id="@+id/btnGetValue"
        style="@style/Custom.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/get_value" />

    <Button
        android:id="@+id/btnGotoFragment"
        style="@style/Custom.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnGetValue"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:text="@string/go_to_fragment" />
</RelativeLayout>
