<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gm.gmannotation.activities.FirstActivity">

    <com.gm.gmannotation.customview.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/first_screen"
        android:id="@+id/txtTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        app:fontName="@string/roboto_light"/>


    <com.gm.gmannotation.customview.CustomEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Custom.EditText"
        android:id="@+id/edtSetBundle"
        android:layout_above="@+id/btnSend"
        android:layout_marginBottom="20dp"
        android:layout_alignParentStart="true"
        app:fontNames="@string/roboto_bold"/>

    <Button
        style="@style/Custom.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Send value to next activity"
        android:id="@+id/btnSend"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <Button
        style="@style/Custom.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Goto Third Activity "
        android:id="@+id/btnSendThirdActivity"
        android:layout_below="@+id/btnSend"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
